--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "id": "o7x05AgAPUP8"
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "id": "k5VtDwfGPUP-",
     "outputId": "688f56dc-afce-4bfd-f354-624e9483ca15"
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "id": "lexGZzzCPUP_",
     "outputId": "af75bdb4-fc3b-4772-c39f-97ba353b141c"
@@ -124,6 +124,7 @@
     "\n",
     "# division: arr1 / arr2\n",
     "\n",
+    "# multiplication: arr1 * arr2\n",
     "# multiplication: arr1 * arr2\n",
     "Arr1 = np.array([[41, 30, 10], [6, 35, 23], [23, 9, 10]])\n",
     "Arr2 = np.array([[4, 29, 2], [5, 13, 3], [24, 16, 7]])\n",
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "id": "ZlpSxf2HPUP_",
     "outputId": "8e5f27b0-534b-4702-af6b-301096951d9d"
@@ -250,7 +251,7 @@
     "data = [10,20,30,40,50]\n",
     "index_labels = ['a', 'b', 'c', 'd', 'e']\n",
     "series = pd.Series(data, index = index_labels)\n",
-    "print(series)\n"
+    "print(series)"
    ]
   },
   {
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -450,8 +451,9 @@
     }
    ],
    "source": [
+    "\n",
     "# solution\n",
-    "pd.read_csv('D:/PYTHON-NUMPY-PROJECT-NISHANTJOSHI/python-numpy-pandas-group-a-nishantjoshi8/data/data.csv')\n"
+    "df = pd.read_csv(\"data/data.csv\")\n"
    ]
   },
   {
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "id": "2pQ2LSFhPUQA",
     "outputId": "9e7811fb-9a3a-47dd-9c7b-0c7030b2880d"
@@ -535,7 +537,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('D:/PYTHON-NUMPY-PROJECT-NISHANTJOSHI/python-numpy-pandas-group-a-nishantjoshi8/data/data.csv')\n",
+    "df = pd.read_csv(\"data/data.csv\")\n",
     "df.head((3))\n"
    ]
   },
@@ -549,13 +551,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "id": "NtWyRwfIPUQA",
     "outputId": "1495bd77-e301-494f-f1ab-0fadf74612fc"
    },
    "outputs": [],
    "source": [
+    "\n",
     "# solution\n",
     "df[\"Tax\"] = df[\"Salary\"] * 0.10\n",
     "df[\"Score\"] = df[['Age', 'Salary', 'Tax']].sum(axis=1)\n"
@@ -570,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "id": "rQ0oT6jxPUQA",
     "outputId": "2165c104-4cb4-4ea8-e8c3-1d70a03d7ca2"
@@ -623,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "id": "qT-ldaKpPUQB",
     "outputId": "918cf5fc-705d-464b-b53f-004f52f20dbc"
@@ -700,6 +703,7 @@
    ],
    "source": [
     "# Sample Data\n",
+    "# Sample Data\n",
     "sales_data = pd.DataFrame({\n",
     "    \"Region\": [\"North\", \"South\", \"North\", \"West\", \"South\", \"West\"],\n",
     "    \"Sales\": [1000, 1500, 1200, 1800, 1300, 1700]\n",
@@ -709,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -725,6 +729,7 @@
     }
    ],
    "source": [
+    "# solution\n",
     "# solution\n",
     "total_sales = sales_data.groupby(\"Region\")[\"Sales\"].agg([\"sum\", \"mean\"])\n",
     "print(total_sales)"
@@ -743,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "id": "RcbdmPYdPUQB",
     "outputId": "eb10b536-d73a-406e-af20-966cba72ce4d"
